k8s/30-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: bogtoworld
spec:
  selector: { app: frontend }
  ports:
    - port: 80
      targetPort: 80
      name: http
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: bogtoworld
spec:
  replicas: 1
  selector:
    matchLabels: { app: frontend }
  template:
    metadata:
      labels: { app: frontend }
    spec:
      containers:
        - name: frontend
          image: YOUR_USER/bogtoworld-frontend:1.0   # o bogtoworld-frontend:local
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
          resources:
            requests: { cpu: "50m", memory: "64Mi" }
            limits:   { cpu: "250m", memory: "256Mi" }
